# tiny-renderer-cpp

./: .gitignore  color.h  geometry.h  gl.cpp  gl.h  main.cpp  meson.build  model.cpp  model.h  paint_example.h  run_test  test  tgaimage.cpp  tgaimage.h  util.h  window.cpp
.github/workflows/: regression.yml
orig/: african_head.tga  diablo3_pose.tga  perspective_clown_diablo3_pose.tga
test/: clown.cpp  illumination.cpp  perspective_clown.cpp  perspective_with_diffusemap.cpp  sample_triangle.cpp
test/orig/: clown_african_head.tga  clown_diablo3_pose.tga  illumination_african_head.tga  illumination_diablo3_pose.tga  perspective_clown_african_head.tga  perspective_with_diffusemap_african_head.tga  perspective_with_diffusemap_diablo3_pose.tga  sample_triangle.tga
